@@ -181,6 +181,8 @@ Version 1.5.1 -- CVS
     unlimited. (#1094569).
   - Security: Added hook for Preferences Backend to resolve potential
     file inclusions. [CAN-2005-0075] 
+  - Remove Printer Friendly Clean Display config option, the cleaning
+    is now always done.
 
 Version 1.5.0
 --------------------
